// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed build allows decorating an error with a code or name 1`] = `
"● Compiling...
✖ Compilation failed

    500: Error message


"
`;

exports[`failed build allows decorating an error with a code or name 2`] = `
"✖ Compilation failed

    Syntax error: Error message


"
`;

exports[`failed build allows hiding the stats from the output 1`] = `
"● Compiling...
✖ Compilation failed

    Error message


"
`;

exports[`failed build renders the correct output 1`] = `
"● Compiling...
✖ Compilation failed

    Error message
    - file1.js:1 method1
        /path/to/file1.js:1:0
      - file2.js:1 method2
        /path/to/file2.js:1:0

"
`;

exports[`printers should allow overriding the various print options 1`] = `
"start
success
stats
start
failure
err
"
`;

exports[`returned object should provide the internal options 1`] = `
Object {
  "printError": [Function],
  "printFailure": [Function],
  "printStart": [Function],
  "printStats": [Function],
  "printSuccess": [Function],
  "stats": false,
  "write": [Function],
}
`;

exports[`returned object should stop reporting if stop is called 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

"
`;

exports[`successful build should display stats only on the first compilation if \`options.stats\` is once 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

● Compiling...
✔ Compilation succeeded (100ms)

● Compiling...
✔ Compilation succeeded (100ms)

● Compiling...
✔ Compilation succeeded (100ms)

"
`;

exports[`successful build should hide the stats from the output if \`options.stats\` is false 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

"
`;

exports[`successful build should render the correct output 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

"
`;

exports[`successful build should reset the displayStats logic when a run finishes 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

● Compiling...
✔ Compilation succeeded (100ms)

● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

● Compiling...
✔ Compilation succeeded (100ms)

"
`;

exports[`successful build should reset the displayStats logic when an unwatch is called 1`] = `
"● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

● Compiling...
✔ Compilation succeeded (100ms)

● Compiling...
✔ Compilation succeeded (100ms)

    Asset    Size
    foo.js   10Kb

● Compiling...
✔ Compilation succeeded (100ms)

"
`;
